--- a/res/layout/security.xml
+++ b/res/layout/security.xml
@@ -2,15 +2,19 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollView1"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" ><HorizontalScrollView
+    android:layout_height="match_parent"
+    android:fillViewport="true" >
+
+    <HorizontalScrollView
         android:id="@+id/horizontalScrollView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:fillViewport="true" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -220,7 +224,7 @@
                     android:maxLines="1"
                     android:text="@string/set" />
             </LinearLayout>
-    </LinearLayout>
+        </LinearLayout>
     </HorizontalScrollView>
-    
+
 </ScrollView>
