--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -25,11 +25,10 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#F000" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal">
 
             <TableLayout
                 android:id="@+id/account_table_names"
@@ -48,7 +47,6 @@
                     android:layout_height="wrap_content"
                     android:stretchColumns="0"></TableLayout>
             </HorizontalScrollView>
-        </LinearLayout>
-
+</LinearLayout>
     </LinearLayout>
 </ScrollView>
